# spread-model

./: .gitignore  README.md  app.py  config.py  main.py  post-pull.sh  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: pytest.yml
datos_y_modelos/Domestic/: 1.xlsx  2.xlsx  4.1.xlsx  4.2.xlsx  4.3.xlsx  4.xlsx  Curva Cero Bonos en Reales - BID.ipynb  brazil_domestic_corp.ipynb  brazil_domestic_govt.ipynb  brazil_domestic_govt_db.xlsx  brazil_domestic_supranational.ipynb  brazil_supranational_db.xlsx  domestic_sovereign_curve_brazil.xlsx  prints.docx  supra.xlsx  universo_brazil_deb_des.xlsx
datos_y_modelos/db/: template.xlsx
datos_y_modelos/db/brazil_domestic_corp_bonds/: bsrch.xlsx
datos_y_modelos/db/brazil_domestic_equities/: APPLIED_BETA.xlsx  BS_GROSS_FIX_ASSET.xlsx  BS_INVEST_IN_ASSOC_CO.xlsx  BS_LT_BORROW.xlsx  BS_PFD_EQY.xlsx  BS_ST_BORROW.xlsx  BS_TOT_ASSET.xlsx  BS_TOT_EQY.xlsx  CAPITAL EXPEND.xlsx  CF_CASH_FROM_OPER.xlsx  CF_DEPR_AMORT.xlsx  COUNTRY_RISK_PREMIUM.xlsx  COUNTRY_RISK_RFR.xlsx  EBITDA.xlsx  EFF_TAX_RATE.xlsx  IS INC TAX EXP.xlsx  IS_COGS_TO_FE_AND_PP_AND_G.xlsx  IS_OPERATING_EXPN.xlsx  IS_OTHER_OPER_INC.xlsx  IS_TOT_CASH_PFD_DVD.xlsx  MINORITY_NONCONTROLLING_INTERES.xlsx  PE_RATIO.xlsx  PX_TO_EBITDA.xlsx  (+2 more)
src/: config.py
src/core/: spread_calculator.py
src/utils/: file_io.py  filters.py  interpolation.py  plotting.py
templates/: index.html  spread_iframe.html  summary_iframe.html
tests/: manual_validation.py  test_di_surface_integrity.py  test_integration_pipeline.py  test_interpolation.py  test_spread_calculator.py
(+49 files in other folders)
