# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spread-model"
version = "0.1.0"
description = "Cálculo de spreads entre curva DI e bonds corporativos"
authors = [
    { name="Thiago Siqueira", email="tsiqueira@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "plotly",
    "openpyxl",
    "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["calendars", "finmath", "core", "utils"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
